-- =====================================================================
-- 지하철 노선 기반 관광 추천 서비스 (MetroTrip)
-- Oracle 백업용 스키마
--
-- 근거 문서 : 데이터베이스 명세서 V1.11
-- 원본 스키마 : schema_mysql_V1.11.sql (MySQL 8.0)
-- 대상 DBMS : Oracle 12.2 이상
--   ※ 제약 이름이 30자를 넘는 것이 6건 있어 11g 이하에서는 실행되지 않는다.
--      원본과의 대조를 위해 이름을 그대로 유지했다.
--
-- 구성 : 23개 테이블 / 146컬럼 / PK 23 / UNIQUE 11 / FK 35 / CHECK 22 / 인덱스 3
--        (+ TIME 형식 검증 CHECK 3건 추가 — 아래 타입 매핑 참조)
--
-- 목적 : MySQL 운영 DB 의 데이터를 Oracle 로 옮겨 보관한다.
--        구조를 1:1로 맞춰 두어 원본과 대조·복구가 가능하도록 한다.
-- =====================================================================


-- =====================================================================
-- 타입·문법 매핑 (MySQL → Oracle)
-- =====================================================================
--
--  MySQL                          Oracle                    비고
--  ------------------------------------------------------------------
--  BIGINT AUTO_INCREMENT          NUMBER(19) IDENTITY       GENERATED BY DEFAULT.
--                                                           적재 후 순번 재설정 필요(STEP 3)
--  BIGINT                         NUMBER(19)
--  INT                            NUMBER(10)
--  TINYINT                        NUMBER(3)
--  TINYINT(1)                     NUMBER(1)
--  DECIMAL(10,7)                  NUMBER(10,7)
--  VARCHAR(n)                     VARCHAR2(n CHAR)          CHAR 단위 명시. 한글 1자 = 1
--  TEXT                           CLOB
--  DATETIME                       TIMESTAMP(0)
--  DATE                           DATE                      Oracle DATE 는 시분초 포함
--  TIME                           VARCHAR2(8 CHAR)          아래 설명 참조
--
-- TIME 타입이 없는 문제
--   Oracle 에는 시각만 담는 타입이 없다. 후보는 두 가지였다.
--     (1) VARCHAR2(8)              — 원본 문자열을 그대로 보존. 채택
--     (2) INTERVAL DAY TO SECOND   — 의미상 정확하나 적재 시 변환이 필요
--   백업이 목적이므로 무손실 왕복을 우선해 (1)을 선택했다.
--   HH24:MI:SS 로 0 채움 형식이면 문자열 정렬 결과가 시각 순서와 일치한다.
--   24:00 이후 값(원본에 24:01:00 등이 존재)도 그대로 보존된다.
--   형식이 깨지는 것을 막기 위해 CHECK 제약을 함께 건다.
--
-- 그대로 옮기지 않은 것
--   ON UPDATE CURRENT_TIMESTAMP  Oracle 에 대응 문법이 없다. 트리거로 구현할 수 있으나
--                                백업본에서는 원본 값을 덮어쓰면 안 되므로 넣지 않는다.
--   ON DELETE RESTRICT           Oracle 은 이 구문을 지원하지 않는다. 절을 생략하면
--                                기본 동작이 NO ACTION 이라 결과가 동일하다. (12건)
--   ENGINE / CHARSET             Oracle 에 해당 개념이 없어 제거.
--                                DB 캐릭터셋이 AL32UTF8 인지 먼저 확인할 것.
--   COMMENT 인라인               Oracle 은 COMMENT ON 문으로 분리한다. 파일 하단 참조.
-- =====================================================================


-- ---------------------------------------------------------------------
-- 사전 확인 : 캐릭터셋
-- ---------------------------------------------------------------------
-- SELECT parameter, value FROM nls_database_parameters
--  WHERE parameter IN ('NLS_CHARACTERSET', 'NLS_NCHAR_CHARACTERSET');
-- NLS_CHARACTERSET 가 AL32UTF8 이어야 한글이 정상 저장된다.


-- =====================================================================
-- STEP 1. 테이블 생성 (FK 의존 순서)
-- =====================================================================

-- 1. users : 회원
CREATE TABLE users (
  user_id      NUMBER(19)       GENERATED BY DEFAULT AS IDENTITY,
  email        VARCHAR2(255 CHAR) NOT NULL,
  password     VARCHAR2(255 CHAR),
  name         VARCHAR2(50 CHAR)  NOT NULL,
  nickname     VARCHAR2(30 CHAR)  NOT NULL,
  phone        VARCHAR2(20 CHAR),
  role         VARCHAR2(20 CHAR)  DEFAULT 'USER' NOT NULL,
  created_at   TIMESTAMP(0)       DEFAULT SYSTIMESTAMP NOT NULL,
  updated_at   TIMESTAMP(0)       DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_users          PRIMARY KEY (user_id),
  CONSTRAINT uk_users_email    UNIQUE (email),
  CONSTRAINT uk_users_nickname UNIQUE (nickname),
  CONSTRAINT ck_users_role     CHECK (role IN ('USER', 'ADMIN'))
);

-- 2. user_agreements : 약관 동의 이력
CREATE TABLE user_agreements (
  agreement_id    NUMBER(19)      GENERATED BY DEFAULT AS IDENTITY,
  user_id         NUMBER(19)      NOT NULL,
  agreement_type  VARCHAR2(30 CHAR) NOT NULL,
  is_agreed       NUMBER(1)       DEFAULT 1 NOT NULL,
  agreed_at       TIMESTAMP(0)    DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_user_agreements                PRIMARY KEY (agreement_id),
  CONSTRAINT ck_user_agreements_agreement_type CHECK (agreement_type IN ('TERMS', 'PRIVACY', 'LOCATION', 'MARKETING')),
  CONSTRAINT ck_user_agreements_is_agreed      CHECK (is_agreed IN (0, 1))
);

-- 3. social_accounts : 소셜 계정 연동
CREATE TABLE social_accounts (
  social_account_id  NUMBER(19)       GENERATED BY DEFAULT AS IDENTITY,
  user_id            NUMBER(19)       NOT NULL,
  provider           VARCHAR2(20 CHAR)  NOT NULL,
  provider_user_id   VARCHAR2(100 CHAR) NOT NULL,
  connected_at       TIMESTAMP(0)     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_social_accounts          PRIMARY KEY (social_account_id),
  CONSTRAINT uk_social_provider          UNIQUE (provider, provider_user_id),
  CONSTRAINT ck_social_accounts_provider CHECK (provider IN ('KAKAO', 'NAVER'))
);

-- 4. auth_tokens : 인증 토큰
CREATE TABLE auth_tokens (
  token_id       NUMBER(19)       GENERATED BY DEFAULT AS IDENTITY,
  user_id        NUMBER(19)       NOT NULL,
  refresh_token  VARCHAR2(512 CHAR) NOT NULL,
  issued_at      TIMESTAMP(0)     DEFAULT SYSTIMESTAMP NOT NULL,
  expires_at     TIMESTAMP(0)     NOT NULL,
  revoked_at     TIMESTAMP(0),
  user_agent     VARCHAR2(255 CHAR),
  CONSTRAINT pk_auth_tokens  PRIMARY KEY (token_id),
  CONSTRAINT uk_auth_refresh UNIQUE (refresh_token)
);

-- 5. email_verifications : 이메일 인증
CREATE TABLE email_verifications (
  verification_id  NUMBER(19)       GENERATED BY DEFAULT AS IDENTITY,
  user_id          NUMBER(19),
  email            VARCHAR2(255 CHAR) NOT NULL,
  purpose          VARCHAR2(20 CHAR)  NOT NULL,
  code_hash        VARCHAR2(255 CHAR) NOT NULL,
  expires_at       TIMESTAMP(0)     NOT NULL,
  attempt_count    NUMBER(10)       DEFAULT 0 NOT NULL,
  verified_at      TIMESTAMP(0),
  created_at       TIMESTAMP(0)     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_email_verifications         PRIMARY KEY (verification_id),
  CONSTRAINT ck_email_verifications_purpose CHECK (purpose IN ('WITHDRAWAL', 'SIGNUP', 'PASSWORD_RESET'))
);

-- 6. subway_lines : 지하철 노선
CREATE TABLE subway_lines (
  line_id        NUMBER(19)      GENERATED BY DEFAULT AS IDENTITY,
  line_name      VARCHAR2(50 CHAR) NOT NULL,
  line_number    VARCHAR2(10 CHAR),
  display_order  NUMBER(10)      DEFAULT 0 NOT NULL,
  CONSTRAINT pk_subway_lines      PRIMARY KEY (line_id),
  CONSTRAINT uk_subway_lines_name UNIQUE (line_name)
);

-- 7. stations : 지하철 역
CREATE TABLE stations (
  station_id    NUMBER(19)        GENERATED BY DEFAULT AS IDENTITY,
  station_name  VARCHAR2(100 CHAR) NOT NULL,
  latitude      NUMBER(10,7)      NOT NULL,
  longitude     NUMBER(10,7)      NOT NULL,
  address       VARCHAR2(255 CHAR),
  CONSTRAINT pk_stations PRIMARY KEY (station_id)
);

-- 8. line_stations : 노선-역 매핑
CREATE TABLE line_stations (
  line_station_id  NUMBER(19) GENERATED BY DEFAULT AS IDENTITY,
  line_id          NUMBER(19) NOT NULL,
  station_id       NUMBER(19) NOT NULL,
  station_order    NUMBER(10) NOT NULL,
  CONSTRAINT pk_line_stations               PRIMARY KEY (line_station_id),
  CONSTRAINT uk_line_stations               UNIQUE (line_id, station_id),
  CONSTRAINT ck_line_stations_station_order CHECK (station_order >= 1)
);

-- 9. train_timetables : 열차 시간표
CREATE TABLE train_timetables (
  timetable_id            NUMBER(19)      GENERATED BY DEFAULT AS IDENTITY,
  train_no                VARCHAR2(20 CHAR),
  line_id                 NUMBER(19)      NOT NULL,
  station_id              NUMBER(19)      NOT NULL,
  day_type                VARCHAR2(10 CHAR) NOT NULL,
  direction               VARCHAR2(10 CHAR) NOT NULL,
  arrival_time            VARCHAR2(8 CHAR),
  departure_time          VARCHAR2(8 CHAR),
  destination_station_id  NUMBER(19),
  CONSTRAINT pk_train_timetables           PRIMARY KEY (timetable_id),
  CONSTRAINT ck_train_timetables_day_type  CHECK (day_type  IN ('WEEKDAY', 'WEEKEND')),
  CONSTRAINT ck_train_timetables_direction CHECK (direction IN ('UP', 'DOWN')),
  CONSTRAINT ck_train_timetables_time      CHECK (arrival_time IS NOT NULL OR departure_time IS NOT NULL),
  CONSTRAINT ck_tt_arrival_format          CHECK (arrival_time   IS NULL OR REGEXP_LIKE(arrival_time,   '^[0-9]{2}:[0-9]{2}:[0-9]{2}$')),
  CONSTRAINT ck_tt_departure_format        CHECK (departure_time IS NULL OR REGEXP_LIKE(departure_time, '^[0-9]{2}:[0-9]{2}:[0-9]{2}$'))
);

-- 10. places : 추천 장소
CREATE TABLE places (
  place_id     NUMBER(19)        GENERATED BY DEFAULT AS IDENTITY,
  place_name   VARCHAR2(100 CHAR) NOT NULL,
  category     VARCHAR2(30 CHAR)  NOT NULL,
  description  CLOB,
  address      VARCHAR2(255 CHAR) NOT NULL,
  latitude     NUMBER(10,7)      NOT NULL,
  longitude    NUMBER(10,7)      NOT NULL,
  phone        VARCHAR2(20 CHAR),
  created_by   NUMBER(19),
  created_at   TIMESTAMP(0)      DEFAULT SYSTIMESTAMP NOT NULL,
  updated_at   TIMESTAMP(0)      DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_places          PRIMARY KEY (place_id),
  CONSTRAINT ck_places_category CHECK (category IN ('TOUR', 'RESTAURANT', 'CAFE', 'SHOPPING', 'ETC'))
);

-- 11. place_stations : 장소-역 매핑
CREATE TABLE place_stations (
  place_station_id  NUMBER(19) GENERATED BY DEFAULT AS IDENTITY,
  place_id          NUMBER(19) NOT NULL,
  station_id        NUMBER(19) NOT NULL,
  CONSTRAINT pk_place_stations PRIMARY KEY (place_station_id)
);

-- 12. place_images : 장소 이미지
CREATE TABLE place_images (
  place_image_id  NUMBER(19)       GENERATED BY DEFAULT AS IDENTITY,
  place_id        NUMBER(19)       NOT NULL,
  image_url       VARCHAR2(500 CHAR) NOT NULL,
  sort_order      NUMBER(10)       NOT NULL,
  CONSTRAINT pk_place_images            PRIMARY KEY (place_image_id),
  CONSTRAINT uk_place_images_order      UNIQUE (place_id, sort_order),
  CONSTRAINT ck_place_images_sort_order CHECK (sort_order >= 1)
);

-- 13. station_favorites : 역 즐겨찾기
CREATE TABLE station_favorites (
  favorite_id  NUMBER(19)   GENERATED BY DEFAULT AS IDENTITY,
  user_id      NUMBER(19)   NOT NULL,
  station_id   NUMBER(19)   NOT NULL,
  created_at   TIMESTAMP(0) DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_station_favorites      PRIMARY KEY (favorite_id),
  CONSTRAINT uk_favorites_user_station UNIQUE (user_id, station_id)
);

-- 14. travel_plans : 여행 동선 계획
CREATE TABLE travel_plans (
  plan_id           NUMBER(19)       GENERATED BY DEFAULT AS IDENTITY,
  user_id           NUMBER(19)       NOT NULL,
  plan_title        VARCHAR2(100 CHAR) NOT NULL,
  start_station_id  NUMBER(19)       NOT NULL,
  end_station_id    NUMBER(19)       NOT NULL,
  created_at        TIMESTAMP(0)     DEFAULT SYSTIMESTAMP NOT NULL,
  updated_at        TIMESTAMP(0)     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_travel_plans PRIMARY KEY (plan_id)
);

-- 15. travel_plan_items : 여행 계획 상세
CREATE TABLE travel_plan_items (
  plan_item_id  NUMBER(19)       GENERATED BY DEFAULT AS IDENTITY,
  plan_id       NUMBER(19)       NOT NULL,
  item_type     VARCHAR2(10 CHAR) DEFAULT 'PLACE' NOT NULL,
  place_id      NUMBER(19),
  station_id    NUMBER(19),
  position      NUMBER(10)       DEFAULT 1 NOT NULL,
  visit_time    VARCHAR2(8 CHAR),
  memo          VARCHAR2(255 CHAR),
  CONSTRAINT pk_travel_plan_items       PRIMARY KEY (plan_item_id),
  CONSTRAINT ck_tpi_visit_time_format   CHECK (visit_time IS NULL OR REGEXP_LIKE(visit_time, '^[0-9]{2}:[0-9]{2}:[0-9]{2}$')),
  CONSTRAINT ck_tpi_item_type           CHECK (item_type IN ('STATION', 'PLACE')),
  CONSTRAINT ck_tpi_item_reference      CHECK ((item_type = 'STATION' AND station_id IS NOT NULL AND place_id IS NULL) OR (item_type = 'PLACE' AND place_id IS NOT NULL))
);

-- 16. reviews : 여행 후기
CREATE TABLE reviews (
  review_id         NUMBER(19)       GENERATED BY DEFAULT AS IDENTITY,
  user_id           NUMBER(19)       NOT NULL,
  title             VARCHAR2(100 CHAR) NOT NULL,
  content           CLOB             NOT NULL,
  start_station_id  NUMBER(19)       NOT NULL,
  end_station_id    NUMBER(19)       NOT NULL,
  rating            NUMBER(3)        NOT NULL,
  travel_cost       NUMBER(10),
  plan_id           NUMBER(19),
  view_count        NUMBER(10)       DEFAULT 0 NOT NULL,
  created_at        TIMESTAMP(0)     DEFAULT SYSTIMESTAMP NOT NULL,
  updated_at        TIMESTAMP(0)     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_reviews             PRIMARY KEY (review_id),
  CONSTRAINT ck_reviews_rating      CHECK (rating BETWEEN 1 AND 10),
  CONSTRAINT ck_reviews_travel_cost CHECK (travel_cost >= 0),
  CONSTRAINT ck_reviews_view_count  CHECK (view_count >= 0)
);

-- 17. review_media : 후기 첨부 미디어
CREATE TABLE review_media (
  media_id    NUMBER(19)       GENERATED BY DEFAULT AS IDENTITY,
  review_id   NUMBER(19)       NOT NULL,
  media_url   VARCHAR2(500 CHAR) NOT NULL,
  media_type  VARCHAR2(10 CHAR)  NOT NULL,
  CONSTRAINT pk_review_media            PRIMARY KEY (media_id),
  CONSTRAINT ck_review_media_media_type CHECK (media_type IN ('IMAGE', 'VIDEO'))
);

-- 18. review_tags : 후기 태그
CREATE TABLE review_tags (
  review_tag_id  NUMBER(19)      GENERATED BY DEFAULT AS IDENTITY,
  review_id      NUMBER(19)      NOT NULL,
  tag_name       VARCHAR2(30 CHAR) NOT NULL,
  CONSTRAINT pk_review_tags PRIMARY KEY (review_tag_id),
  CONSTRAINT uk_review_tags UNIQUE (review_id, tag_name)
);

-- 19. notices : 공지사항
CREATE TABLE notices (
  notice_id    NUMBER(19)       GENERATED BY DEFAULT AS IDENTITY,
  admin_id     NUMBER(19),
  title        VARCHAR2(200 CHAR) NOT NULL,
  content      CLOB             NOT NULL,
  notice_type  VARCHAR2(20 CHAR)  DEFAULT 'BOARD' NOT NULL,
  created_at   TIMESTAMP(0)     DEFAULT SYSTIMESTAMP NOT NULL,
  updated_at   TIMESTAMP(0)     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_notices             PRIMARY KEY (notice_id),
  CONSTRAINT ck_notices_notice_type CHECK (notice_type IN ('ALARM', 'BOARD'))
);

-- 20. line_view_logs : 노선 조회 로그
CREATE TABLE line_view_logs (
  log_id     NUMBER(19)   GENERATED BY DEFAULT AS IDENTITY,
  line_id    NUMBER(19)   NOT NULL,
  user_id    NUMBER(19),
  viewed_at  TIMESTAMP(0) DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_line_view_logs PRIMARY KEY (log_id)
);

-- 21. board_posts : 인원 모집 게시글
CREATE TABLE board_posts (
  post_id           NUMBER(19)       GENERATED BY DEFAULT AS IDENTITY,
  user_id           NUMBER(19)       NOT NULL,
  title             VARCHAR2(100 CHAR) NOT NULL,
  content           CLOB             NOT NULL,
  view_count        NUMBER(10)       DEFAULT 0 NOT NULL,
  recruit_capacity  NUMBER(10)       NOT NULL,
  recruit_deadline  DATE             NOT NULL,
  recruit_status    VARCHAR2(20 CHAR)  DEFAULT 'RECRUITING' NOT NULL,
  meeting_date      DATE,
  plan_id           NUMBER(19),
  created_at        TIMESTAMP(0)     DEFAULT SYSTIMESTAMP NOT NULL,
  updated_at        TIMESTAMP(0)     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_board_posts                  PRIMARY KEY (post_id),
  CONSTRAINT ck_board_posts_view_count       CHECK (view_count >= 0),
  CONSTRAINT ck_board_posts_recruit_capacity CHECK (recruit_capacity >= 1),
  CONSTRAINT ck_board_posts_recruit_status   CHECK (recruit_status IN ('RECRUITING', 'CLOSED'))
);

-- 22. post_participants : 모집 참여자
CREATE TABLE post_participants (
  participant_id  NUMBER(19)      GENERATED BY DEFAULT AS IDENTITY,
  post_id         NUMBER(19)      NOT NULL,
  user_id         NUMBER(19)      NOT NULL,
  status          VARCHAR2(20 CHAR) DEFAULT 'APPLIED' NOT NULL,
  applied_at      TIMESTAMP(0)    DEFAULT SYSTIMESTAMP NOT NULL,
  responded_at    TIMESTAMP(0),
  CONSTRAINT pk_post_participants     PRIMARY KEY (participant_id),
  CONSTRAINT uk_post_participants     UNIQUE (post_id, user_id),
  CONSTRAINT ck_post_participants_status CHECK (status IN ('APPLIED', 'ACCEPTED', 'REJECTED', 'CANCELED'))
);


-- 23. travel_plan_share_links : 여행 계획 공유 링크
CREATE TABLE travel_plan_share_links (
  share_link_id  NUMBER(19)        GENERATED BY DEFAULT AS IDENTITY,
  plan_id        NUMBER(19)        NOT NULL,
  token_hash     VARCHAR2(64 CHAR) NOT NULL,
  created_at     TIMESTAMP(0)      DEFAULT SYSTIMESTAMP NOT NULL,
  expires_at     TIMESTAMP(0)      NOT NULL,
  revoked_at     TIMESTAMP(0),
  CONSTRAINT pk_travel_plan_share_links            PRIMARY KEY (share_link_id),
  CONSTRAINT uk_travel_plan_share_links_token_hash UNIQUE (token_hash),
  CONSTRAINT ck_travel_plan_share_links_expires_at CHECK (expires_at > created_at),
  CONSTRAINT ck_travel_plan_share_links_revoked_at CHECK (revoked_at IS NULL OR revoked_at >= created_at)
);

-- =====================================================================
-- STEP 2. 외래키 제약 (35건)
-- CASCADE 16 / RESTRICT 12(절 생략 = NO ACTION) / SET NULL 7
-- 번호는 데이터베이스 명세서 '관계 정의(FK)' 시트와 일치한다.
-- =====================================================================

ALTER TABLE user_agreements ADD CONSTRAINT fk_user_agreements_user_id
  FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE;                          -- 1
ALTER TABLE social_accounts ADD CONSTRAINT fk_social_accounts_user_id
  FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE;                          -- 2
ALTER TABLE auth_tokens ADD CONSTRAINT fk_auth_tokens_user_id
  FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE;                          -- 3
ALTER TABLE email_verifications ADD CONSTRAINT fk_email_verifications_user_id
  FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE;                          -- 4
ALTER TABLE line_stations ADD CONSTRAINT fk_line_stations_line_id
  FOREIGN KEY (line_id) REFERENCES subway_lines (line_id);                                     -- 5  RESTRICT
ALTER TABLE line_stations ADD CONSTRAINT fk_line_stations_station_id
  FOREIGN KEY (station_id) REFERENCES stations (station_id);                                   -- 6  RESTRICT
ALTER TABLE train_timetables ADD CONSTRAINT fk_train_timetables_line_id
  FOREIGN KEY (line_id) REFERENCES subway_lines (line_id);                                     -- 7  RESTRICT
ALTER TABLE train_timetables ADD CONSTRAINT fk_train_timetables_station_id
  FOREIGN KEY (station_id) REFERENCES stations (station_id);                                   -- 8  RESTRICT
ALTER TABLE train_timetables ADD CONSTRAINT fk_train_timetables_destination_station_id
  FOREIGN KEY (destination_station_id) REFERENCES stations (station_id) ON DELETE SET NULL;    -- 9
ALTER TABLE places ADD CONSTRAINT fk_places_created_by
  FOREIGN KEY (created_by) REFERENCES users (user_id) ON DELETE SET NULL;                      -- 10
ALTER TABLE place_stations ADD CONSTRAINT fk_place_stations_place_id
  FOREIGN KEY (place_id) REFERENCES places (place_id) ON DELETE CASCADE;                       -- 11
ALTER TABLE place_stations ADD CONSTRAINT fk_place_stations_station_id
  FOREIGN KEY (station_id) REFERENCES stations (station_id);                                   -- 12 RESTRICT
ALTER TABLE place_images ADD CONSTRAINT fk_place_images_place_id
  FOREIGN KEY (place_id) REFERENCES places (place_id) ON DELETE CASCADE;                       -- 13
ALTER TABLE station_favorites ADD CONSTRAINT fk_station_favorites_user_id
  FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE;                          -- 14
ALTER TABLE station_favorites ADD CONSTRAINT fk_station_favorites_station_id
  FOREIGN KEY (station_id) REFERENCES stations (station_id);                                   -- 15 RESTRICT
ALTER TABLE travel_plans ADD CONSTRAINT fk_travel_plans_user_id
  FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE;                          -- 16
ALTER TABLE travel_plans ADD CONSTRAINT fk_travel_plans_start_station_id
  FOREIGN KEY (start_station_id) REFERENCES stations (station_id);                             -- 17 RESTRICT
ALTER TABLE travel_plans ADD CONSTRAINT fk_travel_plans_end_station_id
  FOREIGN KEY (end_station_id) REFERENCES stations (station_id);                               -- 18 RESTRICT
ALTER TABLE travel_plan_items ADD CONSTRAINT fk_travel_plan_items_plan_id
  FOREIGN KEY (plan_id) REFERENCES travel_plans (plan_id) ON DELETE CASCADE;                   -- 19
ALTER TABLE travel_plan_items ADD CONSTRAINT fk_travel_plan_items_place_id
  FOREIGN KEY (place_id) REFERENCES places (place_id);                                         -- 20 RESTRICT
ALTER TABLE travel_plan_items ADD CONSTRAINT fk_travel_plan_items_station_id
  FOREIGN KEY (station_id) REFERENCES stations (station_id) ON DELETE SET NULL;                -- 21
ALTER TABLE reviews ADD CONSTRAINT fk_reviews_user_id
  FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE;                          -- 22
ALTER TABLE reviews ADD CONSTRAINT fk_reviews_start_station_id
  FOREIGN KEY (start_station_id) REFERENCES stations (station_id);                             -- 23 RESTRICT
ALTER TABLE reviews ADD CONSTRAINT fk_reviews_end_station_id
  FOREIGN KEY (end_station_id) REFERENCES stations (station_id);                               -- 24 RESTRICT
ALTER TABLE reviews ADD CONSTRAINT fk_reviews_plan_id
  FOREIGN KEY (plan_id) REFERENCES travel_plans (plan_id) ON DELETE SET NULL;                  -- 25
ALTER TABLE review_media ADD CONSTRAINT fk_review_media_review_id
  FOREIGN KEY (review_id) REFERENCES reviews (review_id) ON DELETE CASCADE;                    -- 26
ALTER TABLE review_tags ADD CONSTRAINT fk_review_tags_review_id
  FOREIGN KEY (review_id) REFERENCES reviews (review_id) ON DELETE CASCADE;                    -- 27
ALTER TABLE notices ADD CONSTRAINT fk_notices_admin_id
  FOREIGN KEY (admin_id) REFERENCES users (user_id) ON DELETE SET NULL;                        -- 28
ALTER TABLE line_view_logs ADD CONSTRAINT fk_line_view_logs_line_id
  FOREIGN KEY (line_id) REFERENCES subway_lines (line_id);                                     -- 29 RESTRICT
ALTER TABLE line_view_logs ADD CONSTRAINT fk_line_view_logs_user_id
  FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE SET NULL;                         -- 30
ALTER TABLE board_posts ADD CONSTRAINT fk_board_posts_user_id
  FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE;                          -- 31
ALTER TABLE board_posts ADD CONSTRAINT fk_board_posts_plan_id
  FOREIGN KEY (plan_id) REFERENCES travel_plans (plan_id) ON DELETE SET NULL;                  -- 32
ALTER TABLE post_participants ADD CONSTRAINT fk_post_participants_post_id
  FOREIGN KEY (post_id) REFERENCES board_posts (post_id) ON DELETE CASCADE;                    -- 33
ALTER TABLE post_participants ADD CONSTRAINT fk_post_participants_user_id
  FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE;                          -- 34
ALTER TABLE travel_plan_share_links ADD CONSTRAINT fk_travel_plan_share_links_plan_id
  FOREIGN KEY (plan_id) REFERENCES travel_plans (plan_id) ON DELETE CASCADE;                   -- 35


-- =====================================================================
-- STEP 3. 적재 후 IDENTITY 순번 재설정
--
-- MySQL 의 PK 값을 그대로 넣으므로 Oracle 의 IDENTITY 순번은 1 에 멈춰 있다.
-- 백업본을 읽기 전용으로만 쓴다면 그대로 두어도 되지만, 이곳에 새 행을
-- 넣을 가능성이 있다면 적재 직후 아래를 실행해 최대값 다음으로 맞춘다.
-- =====================================================================
-- DECLARE
--   v_max NUMBER;
-- BEGIN
--   FOR t IN (
--     SELECT 'users' tb, 'user_id' col FROM dual UNION ALL
--     SELECT 'user_agreements',   'agreement_id'     FROM dual UNION ALL
--     SELECT 'social_accounts',   'social_account_id' FROM dual UNION ALL
--     SELECT 'auth_tokens',       'token_id'         FROM dual UNION ALL
--     SELECT 'email_verifications','verification_id' FROM dual UNION ALL
--     SELECT 'subway_lines',      'line_id'          FROM dual UNION ALL
--     SELECT 'stations',          'station_id'       FROM dual UNION ALL
--     SELECT 'line_stations',     'line_station_id'  FROM dual UNION ALL
--     SELECT 'train_timetables',  'timetable_id'     FROM dual UNION ALL
--     SELECT 'places',            'place_id'         FROM dual UNION ALL
--     SELECT 'place_stations',    'place_station_id' FROM dual UNION ALL
--     SELECT 'place_images',      'place_image_id'   FROM dual UNION ALL
--     SELECT 'station_favorites', 'favorite_id'      FROM dual UNION ALL
--     SELECT 'travel_plans',      'plan_id'          FROM dual UNION ALL
--     SELECT 'travel_plan_items', 'plan_item_id'     FROM dual UNION ALL
--     SELECT 'reviews',           'review_id'        FROM dual UNION ALL
--     SELECT 'review_media',      'media_id'         FROM dual UNION ALL
--     SELECT 'review_tags',       'review_tag_id'    FROM dual UNION ALL
--     SELECT 'notices',           'notice_id'        FROM dual UNION ALL
--     SELECT 'line_view_logs',    'log_id'           FROM dual UNION ALL
--     SELECT 'board_posts',       'post_id'          FROM dual UNION ALL
--     SELECT 'post_participants', 'participant_id'   FROM dual UNION ALL
--     SELECT 'travel_plan_share_links','share_link_id' FROM dual
--   ) LOOP
--     EXECUTE IMMEDIATE 'SELECT NVL(MAX(' || t.col || '), 0) + 1 FROM ' || t.tb INTO v_max;
--     EXECUTE IMMEDIATE 'ALTER TABLE ' || t.tb || ' MODIFY ' || t.col ||
--                       ' GENERATED BY DEFAULT AS IDENTITY (START WITH ' || v_max || ')';
--   END LOOP;
-- END;
-- /


-- =====================================================================
-- STEP 4. 조회 성능용 인덱스 (3건)
--
-- MySQL 원본과 동일하게 유지한다. CREATE INDEX 문법은 양쪽이 같다.
-- 백업본에서도 조회를 한다면 필요하고, 적재 전용이라면 적재 속도를 위해
-- 마지막에 만드는 편이 빠르다.
-- =====================================================================
CREATE INDEX idx_timetables_lookup
  ON train_timetables (station_id, day_type, direction, arrival_time);

CREATE INDEX idx_stations_name ON stations (station_name);

CREATE INDEX idx_line_view_logs_time ON line_view_logs (viewed_at, line_id);


-- =====================================================================
-- STEP 5. 코멘트
-- =====================================================================
COMMENT ON TABLE users             IS '회원';
COMMENT ON TABLE user_agreements   IS '약관 동의 이력';
COMMENT ON TABLE social_accounts   IS '소셜 계정 연동';
COMMENT ON TABLE auth_tokens       IS '인증 토큰';
COMMENT ON TABLE email_verifications IS '이메일 인증';
COMMENT ON TABLE subway_lines      IS '지하철 노선';
COMMENT ON TABLE stations          IS '지하철 역';
COMMENT ON TABLE line_stations     IS '노선-역 매핑';
COMMENT ON TABLE train_timetables  IS '열차 시간표';
COMMENT ON TABLE places            IS '추천 장소';
COMMENT ON TABLE place_stations    IS '장소-역 매핑';
COMMENT ON TABLE place_images      IS '장소 이미지';
COMMENT ON TABLE station_favorites IS '역 즐겨찾기';
COMMENT ON TABLE travel_plans      IS '여행 동선 계획';
COMMENT ON TABLE travel_plan_items IS '여행 계획 상세';
COMMENT ON TABLE reviews           IS '여행 후기';
COMMENT ON TABLE review_media      IS '후기 첨부 미디어';
COMMENT ON TABLE review_tags       IS '후기 태그';
COMMENT ON TABLE notices           IS '공지사항';
COMMENT ON TABLE line_view_logs    IS '노선 조회 로그';
COMMENT ON TABLE board_posts       IS '인원 모집 게시글';
COMMENT ON TABLE post_participants IS '모집 참여자';
COMMENT ON TABLE travel_plan_share_links IS '여행 계획 공유 링크';

COMMENT ON COLUMN users.email               IS '로그인 ID 겸용';
COMMENT ON COLUMN users.password            IS '단방향 해시 저장. 소셜 전용 계정은 NULL';
COMMENT ON COLUMN users.phone               IS '''-'' 제외 저장';
COMMENT ON COLUMN users.role                IS 'USER / ADMIN';
COMMENT ON COLUMN users.updated_at          IS 'MySQL 원본은 ON UPDATE 자동 갱신. 백업본은 원본 값을 그대로 보존';
COMMENT ON COLUMN stations.station_name     IS '부역명(괄호) 제외한 정식 역명';
COMMENT ON COLUMN line_stations.station_order IS '해당 노선에서의 정렬 순서(상행 기준)';
COMMENT ON COLUMN train_timetables.train_no IS '열차번호(예: K1904). 동일 열차의 역별 정차 시각을 묶는 키';
COMMENT ON COLUMN train_timetables.arrival_time   IS 'HH24:MI:SS 문자열. 시발역은 NULL. 24:00 이후 값 존재';
COMMENT ON COLUMN train_timetables.departure_time IS 'HH24:MI:SS 문자열. 종착역은 NULL';
COMMENT ON COLUMN train_timetables.destination_station_id IS '종착역. 차량기지 등 역이 아닌 값은 NULL';
COMMENT ON COLUMN travel_plan_items.visit_time IS 'HH24:MI:SS 문자열. 동선 순서는 본 컬럼 오름차순';
COMMENT ON COLUMN reviews.rating            IS '별점. 반개 단위 표현을 위해 1~10 정수로 저장';
COMMENT ON COLUMN place_images.sort_order   IS '1부터 순차 부여. 값이 가장 작은 행이 대표 이미지';
COMMENT ON COLUMN board_posts.recruit_status IS 'RECRUITING(모집중) / CLOSED(마감)';
COMMENT ON COLUMN board_posts.recruit_deadline IS '모집 마감 날짜. 경과 시 신청 차단';
COMMENT ON COLUMN travel_plan_share_links.token_hash IS '공유 토큰 SHA-256 해시(hex). 원문은 저장하지 않음';
COMMENT ON COLUMN travel_plan_share_links.revoked_at IS '폐기 시각. NULL이면 미폐기';


-- =====================================================================
-- STEP 6. 검증
-- =====================================================================
-- SELECT COUNT(*) FROM user_tables;                          -- 23
--
-- SELECT constraint_type, COUNT(*) FROM user_constraints
--  WHERE constraint_name NOT LIKE 'SYS\_%' ESCAPE '\'
--  GROUP BY constraint_type;
-- -- P(PK) 23 / U(UNIQUE) 11 / R(FK) 35 / C(CHECK) 25
-- --   ※ CHECK 이 원본 20건보다 3건 많은 것은 TIME 형식 검증을 추가했기 때문이다.
-- --      Oracle 은 NOT NULL 도 CHECK 로 집계하므로 실제 조회 결과는 더 크게 나온다.
--
-- -- 원본과 건수 대조
-- SELECT 'users' t, COUNT(*) c FROM users UNION ALL
-- SELECT 'stations',        COUNT(*) FROM stations UNION ALL
-- SELECT 'line_stations',   COUNT(*) FROM line_stations UNION ALL
-- SELECT 'places',          COUNT(*) FROM places UNION ALL
-- SELECT 'train_timetables',COUNT(*) FROM train_timetables;
